--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global CSS */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    
+}
+
+body {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+
+.form-row {
+    display: flex;
+}
+.form-col {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.form-col .mat-form-field {
+    flex: 1;
+}
+.form-col input {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
