STEP Dashboard layout completed

--- a/src/app/components/home-components/home-content/home-content.component.html
+++ b/src/app/components/home-components/home-content/home-content.component.html
@@ -5,7 +5,7 @@
             <h2>We can do it!</h2>
         </div>
         <div>
-            
+            <h2>Find Background Image</h2>
         </div>
     </div>
 </div>
