--- a/src/app/components/step-dashboard-components/step-status/step-status.component.html
+++ b/src/app/components/step-dashboard-components/step-status/step-status.component.html
@@ -1,10 +1,10 @@
 <div class="route-content-wrapper">
 
-    <step-dashboard-content-header>
-        <div>Non-Governmental Organisations</div>
+    <!-- <step-dashboard-content-header>
+        <div>Trainee Application Status</div>
         <div></div>
     </step-dashboard-content-header>
-    
+     -->
     <div class="dashboard-content">
         <div>
             <!-- Content here... -->
