--- a/src/app/components/home-components/footer/footer.component.css
+++ b/src/app/components/home-components/footer/footer.component.css
@@ -1,4 +1,9 @@
 footer {
     background: rgb(33, 33, 33);
     height: 400px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
