--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
         </nav>
     </div>
     <div fxLayout="row" fxLayoutAlign="center center">
-
+        <a href="step/dashboard" style="color: white;">STEP Dashboard</a>
     </div>
 </header>
 <div class="header-padding"></div>
