--- a/src/app/components/step-dashboard-components/registration/registration.component.html
+++ b/src/app/components/step-dashboard-components/registration/registration.component.html
@@ -1,1 +1,14 @@
-<p>registration works!</p>
+<div class="route-content-wrapper">
+    
+    <step-dashboard-content-header>
+        <div>Registration</div>
+        <div></div>
+    </step-dashboard-content-header>
+    
+    <div class="dashboard-content">
+        <div>
+            <!-- Content here... -->
+        </div>
+    </div>
+    
+</div>
