--- a/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.html
+++ b/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.html
@@ -1,1 +1,14 @@
-<p>training-sectors works!</p>
+<div class="route-content-wrapper">
+    
+    <step-dashboard-content-header>
+        <div>Training Sectors</div>
+        <div></div>
+    </step-dashboard-content-header>
+    
+    <div class="dashboard-content">
+        <div>
+            <!-- Content here... -->
+        </div>
+    </div>
+    
+</div>
