--- a/src/app/components/home-components/step/step.component.css
+++ b/src/app/components/home-components/step/step.component.css
@@ -5,8 +5,15 @@
 
 .step-form > div {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.step-form > div > div:first-child {
+    width: 400px;
+    margin-bottom: 10px;
 }
 
 .step-form form {
