--- a/src/app/components/step-dashboard-components/step-faq/step-faq.component.html
+++ b/src/app/components/step-dashboard-components/step-faq/step-faq.component.html
@@ -1,9 +1,9 @@
 <div class="route-content-wrapper">
     
-    <!-- <step-dashboard-content-header>
+    <step-dashboard-content-header>
         <div>Frequently Asked Questions</div>
         <div></div>
-    </step-dashboard-content-header> -->
+    </step-dashboard-content-header>
     
     <div class="dashboard-content">
         <div>
