--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,14 @@ body {
     background: rgba(0, 0, 0, 0.1);
 }
 
-
 .form-row {
     display: flex;
+}
+.form-row .form-col {
+    margin-right: 20px;
+}
+.form-row .form-col:last-child {
+    margin-right: 0;
 }
 .form-col {
     flex: 1;
@@ -50,6 +55,7 @@ body {
     align-items: center;
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.2);
     padding: 10px;
+    height: 30px;
 }
 
 .dashboard-content-header > div:first-child {
@@ -107,4 +113,31 @@ body {
     width: 35px;
     height: 35px;
     border-radius: 5px;
+}
+
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background: white;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-label {
+    font-size: 16px;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    padding: 0 0 0 0;
+}
+.mat-form-field {
+    padding: 0;
+}
+input.mat-input-element {
+    font: normal;
+    font-size: 16px;
+}
+.mat-form-field-wrapper .mat-form-field-flex {
+    padding: 0;
+}
+
+textarea {
+    min-height: 100px;
 }
