--- a/src/app/components/step-dashboard-components/forms/step-personal-details/step-personal-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-personal-details/step-personal-details.component.html
@@ -53,6 +53,24 @@
         </div>
     </div>
 
+    <div class="form-row">
+        <div class="form-col">
+            <section class="example-section">
+                <mat-checkbox class="example-margin" #pwd>Person with Disability</mat-checkbox>
+              </section>
+        </div>
+        <div class="form-col">
+            <mat-form-field *ngIf="pwd.checked" appearance="fill">
+              <mat-label>Type of Disability</mat-label>
+              <mat-select>
+                <mat-option *ngFor="let d of disabilities" [value]="d">
+                  {{d}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
+
     <div fxLayout="row" fxLayoutAlign="space-between">
         <button mat-flat-button color="" type="reset">Reset</button>
         <button mat-flat-button color="primary" type="submit">Save</button>
