--- a/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.html
+++ b/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.html
@@ -7,7 +7,16 @@
     
     <div class="dashboard-content">
         <div>
-            <!-- Content here... -->
+            <div class="course-card-row" *ngFor="let course of courses">
+                <div class="course-card">
+                    <h3>{{course[0].code}}</h3>
+                    <p>{{course[0].description}}</p>
+                </div>
+                <div class="course-card">
+                    <h3>{{course[1].code}}</h3>
+                    <p>{{course[1].description}}</p>
+                </div>
+            </div>
         </div>
     </div>
     
