--- a/src/app/components/step-dashboard-components/forms/step-family-details/step-family-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-family-details/step-family-details.component.html
@@ -1,16 +1,16 @@
 <h3>Family Details</h3>
-<form>
+<form [formGroup]="familyDetails" (submit)="saveFamilyDetails()">
     <div class="form-row">
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Mother Name</mat-label>
-                <input matInput >
+                <input formControlName="MotherName" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Mother Designation</mat-label>
-                <input matInput >
+                <input formControlName="MotherDesignation" matInput >
             </mat-form-field>
         </div>
     </div>
@@ -19,13 +19,13 @@
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Father Name</mat-label>
-                <input matInput >
+                <input formControlName="FatherName" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Father Designation</mat-label>
-                <input matInput >
+                <input formControlName="FatherDesignation" matInput >
             </mat-form-field>
         </div>
     </div>
@@ -34,13 +34,13 @@
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Husband Name</mat-label>
-                <input matInput >
+                <input formControlName="HusbandName" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Number of Children</mat-label>
-                <input matInput >
+                <input formControlName="NumberOfChildren" matInput >
             </mat-form-field>
         </div>
     </div>
