--- a/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
@@ -1,16 +1,16 @@
 <h3>Address Details</h3>
-<form>
+<form [formGroup]="addressDetails" (submit)="saveAddressDetails()">
     <div class="form-row">
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>State</mat-label>
-                <input matInput >
+                <input formControlName="State" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>City</mat-label>
-                <input matInput >
+                <input formControlName="City" matInput >
             </mat-form-field>
         </div>
     </div>
@@ -19,28 +19,13 @@
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>District</mat-label>
-                <input matInput >
+                <input formControlName="District" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Pincode</mat-label>
-                <input matInput >
-            </mat-form-field>
-        </div>
-    </div>
-
-    <div class="form-row">
-        <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Husband Name</mat-label>
-                <input matInput >
-            </mat-form-field>
-        </div>
-        <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Number of Children</mat-label>
-                <input matInput >
+                <input formControlName="Pincode" matInput >
             </mat-form-field>
         </div>
     </div>
@@ -49,7 +34,7 @@
         <div class="form-col">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Address</mat-label>
-                <textarea matInput ></textarea>
+                <textarea formControlName="Address" matInput ></textarea>
             </mat-form-field>
         </div>
     </div>
