--- a/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
+++ b/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
@@ -8,6 +8,11 @@
     <div class="dashboard-content">
         <div>
             <!-- Content here... -->
+            Step 1: Fetch from ishwar2393 remote to your remote
+            Step 2: Fetch changes from your remote to local
+            Step 3: Make changes in your local repo
+            Step 4: Push those changes to your remote
+            Step 5: Contribute to ishwar2303
         </div>
     </div>
     
