--- a/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
+++ b/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
@@ -8,6 +8,8 @@
     <div class="dashboard-content">
         <div>
             The Support to Training and Employment Programme for Women (STEP) Scheme aims to provide skills that give employability to women and to provide competencies and skill that enable women to become self-employed/ entrepreneurs. Sectors include Agriculture, Horticulture, Food Processing, Handlooms, Tailoring, Stitching, Embroidery, Zari etc, Handicrafts, Computer & IT enable services along with soft skills and skills for the workplace such as spoken English, Gems &Jewellery etc. Eligibility criteria: All Women who are in the age group of 16 years and above. In this scheme the beneficiaries will be registered under an NGO, that will be providing the training and employment programme.
+
+            Some changes ----
         </div>
     </div>
     
