--- a/src/app/components/home-components/step/step.component.html
+++ b/src/app/components/home-components/step/step.component.html
@@ -1,9 +1,9 @@
 <div class="step-form" fxLayout="row" fxLayoutAlign="center center">
     <div>
-        <div>
+        <div class="step-heading">
             <h3>Increase Your Employment Opportunities by Acquiring Competencies with the Help of NGOs</h3>
         </div>
-        <form [formGroup]="stepLogin" (submit)="login()">
+        <form [formGroup]="stepLogin" (submit)="login()" class="step-login-form">
             <h1 fxLayout="row" fxLayoutAlign="center center">
                 <svg style="width:24px;height:24px;margin-right:10px;" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
@@ -33,7 +33,7 @@
           </form>
     </div>
     <div fxLayout="row" fxLayoutAlign="center center">
-        <form [formGroup]="stepRegister" (submit)="register()">
+        <form [formGroup]="stepRegister" (submit)="register()" class="step-register-form">
             <h1 fxLayout="row" fxLayoutAlign="center center">
                 <svg style="width:24px;height:24px;margin-right:10px;" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4M15,5.9C16.16,5.9 17.1,6.84 17.1,8C17.1,9.16 16.16,10.1 15,10.1A2.1,2.1 0 0,1 12.9,8A2.1,2.1 0 0,1 15,5.9M4,7V10H1V12H4V15H6V12H9V10H6V7H4M15,13C12.33,13 7,14.33 7,17V20H23V17C23,14.33 17.67,13 15,13M15,14.9C17.97,14.9 21.1,16.36 21.1,17V18.1H8.9V17C8.9,16.36 12,14.9 15,14.9Z" />
@@ -44,18 +44,18 @@
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Full Name</mat-label>
-                        <input type="text" formControlName="FullName" matInput>
+                        <input maxlength="30" type="text" formControlName="FullName" matInput>
                     </mat-form-field>
+                    <div class="form-error" *ngIf="stepRegisterSubmitted && stepRegister.controls['FullName'].invalid">ffafa</div>
                 </div>
-            </div>
-            <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Username</mat-label>
-                        <input type="text" formControlName="Username" matInput>
+                        <input type="text" maxlength="30" formControlName="Username" matInput>
                     </mat-form-field>
                 </div>
             </div>
+
             <div class="form-row mb-10">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
@@ -66,8 +66,6 @@
                         <mat-datepicker #picker></mat-datepicker>
                       </mat-form-field>
                 </div>
-            </div>
-            <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Contact</mat-label>
@@ -75,14 +73,28 @@
                     </mat-form-field>
                 </div>
             </div>
+
             <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Password</mat-label>
-                        <input type="password" formControlName="Password" matInput>
+                        <input type="password" formControlName="Password" matInput #password>
                     </mat-form-field>
                 </div>
+                <div class="form-col">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Confirm Password</mat-label>
+                        <input type="password" formControlName="ConfirmPassword" matInput #confirmPassword>
+                    </mat-form-field>
+                    <div class="form-error" *ngIf="password.value != confirmPassword.value">
+                        <svg viewBox="0 0 24 24">
+                            <path fill="currentColor" d="M 11,4L 13,4L 13,15L 11,15L 11,4 Z M 13,18L 13,20L 11,20L 11,18L 13,18 Z" />
+                        </svg>
+                        <span>Password not matched</span>
+                    </div>
+                </div>
             </div>
+
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button type="reset">Reset</button>
                 <button mat-flat-button color="primary" type="submit" [disabled]="stepRegister.invalid">Register</button>
