--- a/src/app/components/step-dashboard-components/registration/registration.component.css
+++ b/src/app/components/step-dashboard-components/registration/registration.component.css
@@ -12,6 +12,10 @@ nav a {
     white-space: nowrap;
 }
 
+nav a svg {
+    margin-right: 5px;
+}
+
 nav .active {
     background: rgb(54 110 178);
     color: white;
