--- a/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.css
+++ b/src/app/components/step-dashboard-components/training-sectors/training-sectors.component.css
@@ -1,15 +1,17 @@
 .course-card-row {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
-
+.course-card-row:first-child {
+    margin-top: 10px;
+}
 .course-card-row:last-child {
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .course-card {
     flex: 1;
-    margin-right: 10px;
+    margin-right: 20px;
     background: rgb(238, 244, 254);
     border-radius: 10px;
 }
@@ -20,12 +22,14 @@
 
 .course-card > h3 {
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.4);
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 0;
     font-size: 20px;
+    padding-bottom: 10px;
 }
 
 .course-card > p {
-    padding: 10px;
+    padding: 20px;
     text-align: justify;
+    padding-top: 10px;
 }
