--- a/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
+++ b/src/app/components/step-dashboard-components/guidelines/guidelines.component.html
@@ -7,9 +7,50 @@
     
     <div class="dashboard-content">
         <div>
-            The Support to Training and Employment Programme for Women (STEP) Scheme aims to provide skills that give employability to women and to provide competencies and skill that enable women to become self-employed/ entrepreneurs. Sectors include Agriculture, Horticulture, Food Processing, Handlooms, Tailoring, Stitching, Embroidery, Zari etc, Handicrafts, Computer & IT enable services along with soft skills and skills for the workplace such as spoken English, Gems &Jewellery etc. Eligibility criteria: All Women who are in the age group of 16 years and above. In this scheme the beneficiaries will be registered under an NGO, that will be providing the training and employment programme.
+            <div class="guidelines">
+                <div class="guidelines-card">
+                    <h3>Guidelines under STEP Programme for Women</h3>
+                    <p>The Support to Training and Employment Programme for Women (STEP) Scheme aims to provide skills that give employability to women and to provide competencies and skill that enable women to become self-employed/ entrepreneurs. Sectors include Agriculture, Horticulture, Food Processing, Handlooms, Tailoring, Stitching, Embroidery, Zari etc, Handicrafts, Computer & IT enable services along with soft skills and skills for the workplace such as spoken English, Gems &Jewellery etc. Eligibility criteria: All Women who are in the age group of 16 years and above. In this scheme the beneficiaries will be registered under an NGO, that will be providing the training and employment programme.</p>
+                </div>
+                <div>
+                    <img src="../../../../assets/images/new-dawn.jpeg" />
+                </div>
+            </div>
 
+            <div class="guidelines-details">
+                <p>
+                    Women will be given training on various aspects, including group formation, skill
+                    upgradation management of the primary producer groups and co-operatives, entrepreneurship skills,
+                    marketing, awareness of their rights and gender concern etc. So as to equip them to face, overcome
+                    and resolve their economic and social constraints and problems at their own level and to promote
+                    genuine empowerment. This is the basic approach towards the evaluation of the Status of women.</p>
+                <p>The implementing agency in the project formulation will outline the training arrangements of
+                    the beneficiaries, extension workers, field supervisors and technical staff, etc. identifying the training
+                    institute, guidelines of training, cost estimate etc. No additional training institute will be established.
+                    The existing infrastructure already available will be uplifted and Training will be through accredited
+                    agencies/Trainers. NIPCCD will coordinate the training arrangements and ensure that the training is
+                    imparted not only in the technical trade to upgrade the skills of market management, but also in
+                    gender sensitization, gender awareness, including legal literacy and sensitization.</p>
 
+                <p>
+                    Strong forward and backward linkages will be essential to ensure the viability and success of
+                    the economic activities of the project in the sector. The implementing agency will help for the
+                    provision of raw materials, ensure proper marketing and tie-ups for marketing of the produce’s during
+                    the project period and help the groups of women under the project to manage these activities within
+                    the group once the project is over. The implementing agency will help up in tying up credit facilities.
+                    Rashtriya Mahila Kosh (RMK) will be included as a nodal agency for micro credit facilities. Besides,
+                    other financial institutions/agencies may be considered for credit linkages of the beneficiaries
+                    depending on their presence in the area. The women’s groups should not be wholly captive to
+                    Governmental Corporations for marketing their products in the interest of making the groups selfsustaining in
+                    their rural set up. One of the project objectives will be to ensure that these groups are
+                    able to develop and thrive on a self-sustaining basis in the market place, with the minimal of
+                    Governmental and formal support and intervention.
+                </p>
+                <p>
+                    The implementing agency will issue Photo Identity Card to all beneficiaries for the project and a copy
+                    of the same will be forwarded to the Ministry for records.
+                </p>
+            </div>
         </div>
     </div>
     
