--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,12 @@ body {
     background: rgba(0, 0, 0, 0.1);
 }
 
+p {
+    line-height: 1.6;
+    text-align: justify;
+    font-size: 16px;
+}
+
 .form-row {
     display: flex;
 }
@@ -36,6 +42,10 @@ body {
 
 .mb-10 {
     margin-bottom: 10px;
+}
+
+.ml-10 {
+    margin-left: 10px;
 }
 
 
@@ -148,4 +158,18 @@ textarea {
 }
 .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element, .mat-checkbox:active:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element {
     background: rgb(54 110 178);
+}
+
+.form-error {
+    color: red;
+    display: flex;
+    align-items: center;
+    margin-top: -15px;
+    font-size: 13px;
+}
+
+.form-error svg {
+    margin-right: 5px;
+    width: 18px;
+    height: 18px;
 }
