ABOUT US AND LEGISLATIVE STYLING

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,33 @@
-<p>about-us works!</p>
+<!-- <p>about-us works!</p> -->
+<div style="padding-top:20px;">
+<div class="quote">
+    <blockquote>Women account for only 19.9% of the total labor force in India.</blockquote>  
+</div>
+<!-- <h1 style="margin:20px;color:rgb(87, 86, 86)">
+    Vision and Mission
+</h1> -->
+<div class="main-head">
+<div class="subhead1">
+    <div><h2>Vision</h2></div>
+    <div class="content">
+        Empowered women living with dignity and contributing as equal partners in development in an environment free from violence and discrimination. And, wellnurtured children with full opportunities for growth and development in a safe and protective environment.
+    </div>
+    
+</div>
+<div class="subhead2">
+    <div><h2>Mission</h2></div>
+    <div class="content">
+        Promoting social and economic empowerment of women through cross-cuting policies and programmes, mainstreaming gender concerns, creating awareness about their rights and facilitating institutional and legislative support for enabling them realize their human rights and develop to their full potential. Ensuring development, care and protection of children through cross-cutting policies and programmes, spreading awareness about their rights and facilitating access to learning, nutrition, institutional and legislative support for enabling them to grow and develop to their full potential.
+    </div>
+    
+</div>
+
+</div>
+<div class="mandate">
+    <div><h2>Mandate</h2></div>
+    <div class="content pad">
+        The broad mandate of this organisation is to have holistic development of Women and Children. As a nodal Ministry for the advancement of women and children, the Ministry formulates plans, policies and programmes; enacts/ amends legislation, guides and coordinates the efforts of both governmental and non-governmental organisations working in the field of Women and Child Development. Besides, playing its nodal role, the NGOs implements certain innovative programmes for women and children. These programmes cover welfare and support services, training for employment and income generation, awareness generation and gender sensitization. These programmes play a supplementary and complementary role to the other general developmental programmes in the sectors of health, education, rural development etc. All these efforts are directed to ensure that women are empowered both economically and socially and thus become equal partners in national development along with men.
+    </div>
+
+</div>
+</div>
