--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,6 +15,8 @@
     </div>
     <div fxLayout="row" fxLayoutAlign="center center">
         <a href="step/dashboard" style="color: white;">STEP Dashboard</a>
+        <a href="ngo/dashboard" style="color: white;">NGO Dashboard</a>
+        <a href="admin/dashboard" style="color: white;">Admin Dashboard</a>
     </div>
 </header>
 <div class="header-padding"></div>
