--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,33 @@ p {
     font-size: 16px;
 }
 
+.flex-row {
+    display: flex;
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.jc-c {
+    justify-content: center;
+}
+.jc-e {
+    justify-content: flex-end;
+}
+
+.jc-sb {
+    justify-content: space-between;
+}
+
+.ai-c {
+    align-items: center;
+}
+.ai-e {
+    align-items: flex-end;
+}
+
 .form-row {
     display: flex;
 }
@@ -44,8 +71,20 @@ p {
     margin-bottom: 10px;
 }
 
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
 .ml-10 {
     margin-left: 10px;
+}
+
+.pb-20 {
+    padding-bottom: 20px;
 }
 
 
@@ -172,4 +211,19 @@ textarea {
     margin-right: 5px;
     width: 18px;
     height: 18px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    white-space: nowrap;
+}
+th, td {
+    text-align: left;
+    padding: 10px;
+
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
 }
