--- a/src/app/components/home-components/home-content/home-content.component.css
+++ b/src/app/components/home-components/home-content/home-content.component.css
@@ -1,9 +1,11 @@
-
 .main-banner {
     height: 80vh;
-    background-image: url('../../../../assets/images/women-empowerment.jpeg');
+    background-image: url('../../../../assets/images/women-empowerment.webp');
     position: relative;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
+
 .overlay {
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
@@ -16,7 +18,7 @@
     display: flex;
 }
 
-.overlay > div {
+.overlay>div {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -31,4 +33,87 @@
 
 .overlay h2 {
     font-size: 50px;
+}
+
+blockquote::before {
+    content: open-quote;
+}
+
+blockquote::after {
+    content: close-quote;
+}
+
+blockquote {
+    quotes: "“""”""‘""’";
+}
+
+.main-head {
+    display: flex;
+    background: linear-gradient(168deg, #5c0436, #821854);
+    margin: 20px 50px;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+
+.subhead1 {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 30px 40px;
+    margin: 20px;
+    background-color: rgb(223 223 223);
+    border-radius: 10px;
+}
+.subhead1 div:last-child {
+    flex: 1;
+}
+
+.subhead2 {
+    display: flex;
+    flex-direction: column;
+    flex: 1.5;
+    padding: 30px 40px;
+    margin: 20px;
+    background-color: rgb(223 223 223);
+    border-radius: 10px;
+    text-align: center;
+}
+
+.subhead2 div:last-child {
+    flex: 1;
+}
+
+.mandate {
+    background: white;
+    padding: 20px 50px;
+}
+
+.quote {
+    margin: 20px 50px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255);
+    color: #821854;
+    border-color: grey;
+    padding: 40px;
+    border-radius: 10px;
+}
+
+h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.content {
+    font-size: 17px;
+    text-align: center;
+}
+
+.pad {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 50px;
+    text-align: center;
 }
