--- a/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.html
+++ b/src/app/components/home-components/legislation-and-policy/legislation-and-policy.component.html
@@ -1,2 +1,24 @@
-<p>legislation-and-policy works!</p>
-<h1>Changes made by Ishwar</h1>
+<!-- <p>legislation-and-policy works!</p> -->
+<!-- <h1>Changes made by Ishwar</h1> -->
+<div class="box1">
+        <div class="left">
+            <div class="scheme"></div>
+            <div class="main-banner"></div>
+        </div>
+        <div class="box2">
+            <div>
+                <h2>Policy Initiatives</h2>
+            </div>
+            <div>
+                For the holistic development of the women’s socio economic status, the organisation has been implementing the world's largest and most unique and outreach programme of  The Support to Training and Employment Programme for Women (STEP) providing a package of employability skills in various sectors comprising of Agriculture, Horticulture, Food Processing, Handlooms, Tailoring, Stitching, Embroidery, Zari etc. Handicrafts, Computer & IT enable services along with soft skills and skills for the workplace such as spoken English, Gems &Jewellery etc. There is effective coordination and monitoring of various sectoral programmes. Most of the programmes of the organisation are run through non-governmental organisations. Efforts are made to have more effective involvement of NGOs. The major policy initiatives undertaken by the Ministry in the recent past include universalization of STEP and Sukanya Samridhi Yojna, launching a funding programme for girl child, for protection of Child Rights and enactment of Protection of Women from Domestic Violence Act.
+            </div>
+            <div>
+                <div class="step">
+                    <h2>STEP Scheme</h2>
+                </div>
+                
+                The Support to Training and Employment Programme for Women (STEP) Scheme aims to provide skills that give employability to women and to provide competencies and skill that enable women to become self-employed/ entrepreneurs. Sectors include Agriculture, Horticulture, Food Processing, Handlooms, Tailoring, Stitching, Embroidery, Zari etc, Handicrafts, Computer & IT enable services along with soft skills and skills for the workplace such as spoken English, Gems &Jewellery etc. Eligibility criteria: All Women who are in the age group of 16 years and above. In this scheme the beneficiaries will be registered under an NGO, that will be providing the training and employment programme.
+            </div>
+        </div>
+    </div>
+    
