--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,9 @@
 body {
     background: rgba(0, 0, 0, 0.1);
 }
-
+div {
+    line-height: 1.6;
+}
 p {
     line-height: 1.6;
     text-align: justify;
