--- a/src/app/components/admin-components/admin-courses/admin-courses.component.html
+++ b/src/app/components/admin-components/admin-courses/admin-courses.component.html
@@ -1,1 +1,13 @@
-<p>admin-courses works!</p>
+<div class="route-content-wrapper">
+
+    <step-dashboard-content-header>
+        <div>Courses</div>
+        <div></div>
+    </step-dashboard-content-header>
+    
+    <div class="dashboard-content">
+        <div>
+        </div>
+    </div>
+    
+</div>
