--- a/src/app/components/ngo-dashboard-components/criteria/criteria.component.html
+++ b/src/app/components/ngo-dashboard-components/criteria/criteria.component.html
@@ -1,1 +1,13 @@
-<p>criteria works!</p>
+<div class="route-content-wrapper">
+
+    <step-dashboard-content-header>
+        <div>Criteria</div>
+        <div></div>
+    </step-dashboard-content-header>
+    
+    <div class="dashboard-content">
+        <div>
+        </div>
+    </div>
+    
+</div>
