--- a/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
@@ -1,4 +1,4 @@
-<h3>Personal Details</h3>
+<h3>Organization Details</h3>
 <form [formGroup]="organizationDetails" (submit)="saveOrganizationDetails()">
 
     <div class="form-row">
