--- a/src/app/components/home-components/ngo/ngo.component.html
+++ b/src/app/components/home-components/ngo/ngo.component.html
@@ -1,6 +1,6 @@
 <div class="step-form" fxLayout="row" fxLayoutAlign="center center">
     <div>
-        <form  class="step-login-form">
+        <form [formGroup]="ngoRegister" (submit)="register()" class="step-login-form">
             <h1 fxLayout="row" fxLayoutAlign="center center">
                 <svg style="width:24px;height:24px;margin-right:10px;" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
@@ -24,12 +24,12 @@
             </div>
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button  type="reset">Reset</button>
-                <button mat-flat-button color="primary" type="submit" >Login</button>
+                <button mat-flat-button color="primary" type="submit" [disabled]="ngoRegister.invalid" >Register</button>
             </div>
           </form>
     </div>
     <div fxLayout="row" fxLayoutAlign="center center">
-        <form class="step-login-form">
+        <form [formGroup]="ngoLogin" (submit)="login()" class="step-login-form">
             <h1 fxLayout="row" fxLayoutAlign="center center">
                 <svg style="width:24px;height:24px;margin-right:10px;" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
@@ -53,7 +53,7 @@
             </div>
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button  type="reset">Reset</button>
-                <button mat-flat-button color="primary" type="submit">Login</button>
+                <button mat-flat-button color="primary" type="submit" [disabled]="ngoLogin.invalid">Login</button>
             </div>
           </form>
     </div>
